# FaithCAMERA

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: FaithCAMERA.tsv
src/skit/: __main__.py  task.py
src/skit/models/: __init__.py  base.py  linear_model.py  types.py
