[tool.poetry]
name = "starter-kit"
version = "0.1.0"
description = "Python Project Starter Kit for Researchers."
authors = ["chck <iwazaki_yuki@cyberagent.co.jp>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "skit", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
rich = "^13.7.1"
pydantic = "^2.7.1"
numpy = "^1.26.4"
pydantic-numpy = "^5.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
mypy = "^1.10.0"
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
